@@ -825,6 +825,13 @@ foreach ($result as $event) {
 		$string .= '</a></td></tr><tr class="' . $odd . '">';
 		//$odd = '';
 		$odd = ($odd == '')? 'rowOdd' : '';
+		
+		if ($event["criticity"] != '') {
+			$string .= '<tr class="' . $odd . '"><td align="left" valign="top">' . '<b>' . __('Criticity') . '</td><td align="left">';
+			$string .= $event["criticity"];
+			$string .= '</td></tr><tr>';
+			$odd = ($odd == '')? 'rowOdd' : '';
+		}
 	}
 	
 	$string .= '<td align="left" valign="top" width="15%">';
@@ -885,12 +892,7 @@ foreach ($result as $event) {
 		$string .= '<i>- ' . __('Empty') . ' -</i>';
 		$odd = ($odd == '')? 'rowOdd' : '';
 	}
-	if ($event["criticity"] != '') {
-		$string .= '<tr class="' . $odd . '"><td align="left" valign="top">' . '<b>' . __('Criticity') . '</td><td align="left">';
-		$string .= $event["criticity"];
-		$string .= '</td></tr><tr>';
-		$odd = ($odd == '')? 'rowOdd' : '';
-	}
+
 	$string .= '</td></tr>';
 	$string .= '</table>';
 	
