@@ -1,3 +1,9 @@
+2012-02-08  Vanessa Gil  <vanessa.gil@artica.es>
+	* godmode/events/custom_events.php: Remove comments.
+
+	* operation/events/events_list.php: Show criticity only for
+	  alerts.
+
 2012-02-07  Vanessa Gil  <vanessa.gil@artica.es>
 	* pandoradb.sql
 	  pandoradb.postgreSQL.sql
